--- a/ext/ai-admin-jqadm/admin/i18n/ext/it.po
+++ b/ext/ai-admin-jqadm/admin/i18n/ext/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: aimeos-core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-21 23:29+0200\n"
-"PO-Revision-Date: 2017-10-02 15:52+0000\n"
+"PO-Revision-Date: 2017-11-29 08:22+0000\n"
 "Last-Translator: Aimeos\n"
 "Language-Team: Italian (http://www.transifex.com/aimeos/aimeos-core/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgid ">="
 msgstr ""
 
 msgid "Search"
-msgstr ""
+msgstr "Cerca"
 
 msgid "~="
 msgstr ""
@@ -54,4 +54,4 @@ msgid "service:delivery"
 msgstr "Consegna"
 
 msgid "service:payment"
-msgstr ""
+msgstr "Pagamento"
